versions/GNDS-v2.0/GNDS/c/src/v2.0/top/PoPs.h

// --- Const-aware handles.
typedef const struct PoPsClass *const ConstHandle2ConstPoPs;
typedef       struct PoPsClass *const ConstHandle2PoPs;
typedef const struct PoPsClass *      Handle2ConstPoPs;
typedef       struct PoPsClass *      Handle2PoPs;
// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstPoPs
PoPsDefaultConst();
// +++ Create, default
extern_c Handle2PoPs
PoPsDefault();
// --- Create, general, const
extern_c Handle2ConstPoPs
PoPsCreateConst(
   const char *const name,
   const char *const version,
   const char *const format,
   ConstHandle2ConstAliases aliases,
   ConstHandle2ConstBaryons baryons,
   ConstHandle2ConstChemicalElements chemicalElements,
   ConstHandle2ConstStyles styles,
   ConstHandle2ConstUnorthodoxes unorthodoxes,
   ConstHandle2ConstGaugeBosons gaugeBosons,
   ConstHandle2ConstLeptons leptons
);
// +++ Create, general
extern_c Handle2PoPs
PoPsCreate(
   const char *const name,
   const char *const version,
   const char *const format,
   ConstHandle2ConstAliases aliases,
   ConstHandle2ConstBaryons baryons,
   ConstHandle2ConstChemicalElements chemicalElements,
   ConstHandle2ConstStyles styles,
   ConstHandle2ConstUnorthodoxes unorthodoxes,
   ConstHandle2ConstGaugeBosons gaugeBosons,
   ConstHandle2ConstLeptons leptons
);
// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
PoPsAssign(ConstHandle2PoPs self, ConstHandle2ConstPoPs from);
// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
PoPsDelete(ConstHandle2ConstPoPs self);
// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
PoPsRead(ConstHandle2PoPs self, const char *const filename);
// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
PoPsWrite(ConstHandle2ConstPoPs self, const char *const filename);
// +++ Print to standard output, in our prettyprinting format
extern_c int
PoPsPrint(ConstHandle2ConstPoPs self);
// +++ Print to standard output, as XML
extern_c int
PoPsPrintXML(ConstHandle2ConstPoPs self);
// +++ Print to standard output, as JSON
extern_c int
PoPsPrintJSON(ConstHandle2ConstPoPs self);
// -----------------------------------------------------------------------------
// Metadatum: name
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
PoPsNameHas(ConstHandle2ConstPoPs self);
// +++ Get
// +++ Returns by value
extern_c const char *
PoPsNameGet(ConstHandle2ConstPoPs self);
// +++ Set
extern_c void
PoPsNameSet(ConstHandle2PoPs self, const char *const name);
// -----------------------------------------------------------------------------
// Metadatum: version
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
PoPsVersionHas(ConstHandle2ConstPoPs self);
// +++ Get
// +++ Returns by value
extern_c const char *
PoPsVersionGet(ConstHandle2ConstPoPs self);
// +++ Set
extern_c void
PoPsVersionSet(ConstHandle2PoPs self, const char *const version);
// -----------------------------------------------------------------------------
// Metadatum: format
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
PoPsFormatHas(ConstHandle2ConstPoPs self);
// +++ Get
// +++ Returns by value
extern_c const char *
PoPsFormatGet(ConstHandle2ConstPoPs self);
// +++ Set
extern_c void
PoPsFormatSet(ConstHandle2PoPs self, const char *const format);
// -----------------------------------------------------------------------------
// Child: aliases
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
PoPsAliasesHas(ConstHandle2ConstPoPs self);
// --- Get, const
extern_c Handle2ConstAliases
PoPsAliasesGetConst(ConstHandle2ConstPoPs self);
// +++ Get
extern_c Handle2Aliases
PoPsAliasesGet(ConstHandle2PoPs self);
// +++ Set
extern_c void
PoPsAliasesSet(ConstHandle2PoPs self, ConstHandle2ConstAliases aliases);
// -----------------------------------------------------------------------------
// Child: baryons
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
PoPsBaryonsHas(ConstHandle2ConstPoPs self);
// --- Get, const
extern_c Handle2ConstBaryons
PoPsBaryonsGetConst(ConstHandle2ConstPoPs self);
// +++ Get
extern_c Handle2Baryons
PoPsBaryonsGet(ConstHandle2PoPs self);
// +++ Set
extern_c void
PoPsBaryonsSet(ConstHandle2PoPs self, ConstHandle2ConstBaryons baryons);
// -----------------------------------------------------------------------------
// Child: chemicalElements
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
PoPsChemicalElementsHas(ConstHandle2ConstPoPs self);
// --- Get, const
extern_c Handle2ConstChemicalElements
PoPsChemicalElementsGetConst(ConstHandle2ConstPoPs self);
// +++ Get
extern_c Handle2ChemicalElements
PoPsChemicalElementsGet(ConstHandle2PoPs self);
// +++ Set
extern_c void
PoPsChemicalElementsSet(ConstHandle2PoPs self, ConstHandle2ConstChemicalElements chemicalElements);
// -----------------------------------------------------------------------------
// Child: styles
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
PoPsStylesHas(ConstHandle2ConstPoPs self);
// --- Get, const
extern_c Handle2ConstStyles
PoPsStylesGetConst(ConstHandle2ConstPoPs self);
// +++ Get
extern_c Handle2Styles
PoPsStylesGet(ConstHandle2PoPs self);